# frigate

./: CMakeLists.txt  Conference Presentation.pptx  README.md
output/: README.txt
src/: fileIO.c  fileIO.h  frigate.c  frigate.h  frigate_parallel.c  histogram.c  histogram.h  main.c  query.c  query.h  systemProperties.c  systemProperties.h
